Bug 473536 - Tags textbox on editBookmarkPanel is too narrow for a large font, r=dao, a=regression from bug 413053

--- a/browser/themes/gnomestripe/browser/browser.css
+++ b/browser/themes/gnomestripe/browser/browser.css
@@ -1089,7 +1089,7 @@ toolbar[iconsize="small"] #paste-button[disabled="true"] {
 
 /* Implements editBookmarkPanel resizing on folderTree un-collapse. */
 #editBMPanel_folderTree {
-  min-width: 300px;
+  min-width: 27em;
 }
 
 /* Content area */
