--- a/browser/themes/winstripe/browser/browser.css
+++ b/browser/themes/winstripe/browser/browser.css
@@ -1265,7 +1265,7 @@ statusbarpanel#statusbar-display {
 
 /* Implements editBookmarkPanel resizing on folderTree un-collapse. */
 #editBMPanel_folderTree {
-  min-width: 300px;
+  min-width: 27em;
 }
 
 /* ::::: content area ::::: */
